k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1
  labels: 
    name: dev-namespace
